compiler/fir/analysis-tests/testData/resolve/diagnostics/sealedClassConstructorCall.kt
sealed class A

val b = <!SEALED_CLASS_CONSTRUCTOR_CALL{LT}!><!SEALED_CLASS_CONSTRUCTOR_CALL{PSI}!>A<!>()<!>
